Domain name to links with images

--- a/common/templates/common/before-start/main.html
+++ b/common/templates/common/before-start/main.html
@@ -11,20 +11,20 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Bookgo.me - обмінюємось книгами онлайн">
     <meta itemprop="description" content="Bookgo.me - онлайн платформа для обміну книгами для всіх хто любить книги">
-    <meta itemprop="image" content="{% static "img/landing/header.jpg" %}">
+    <meta itemprop="image" content="{{ request.scheme }}://{{ request.get_host }}{% static "img/landing/header.jpg" %}">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="http://bookgo.me">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Bookgo.me - обмінюємось книгами онлайн">
     <meta property="og:description" content="Bookgo.me - онлайн платформа для обміну книгами для всіх хто любить книги">
-    <meta property="og:image" content="{% static "img/landing/header.jpg" %}">
+    <meta property="og:image" content="{{ request.scheme }}://{{ request.get_host }}{% static "img/landing/header.jpg" %}">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Bookgo.me - обмінюємось книгами онлайн">
     <meta name="twitter:description" content="Bookgo.me - онлайн платформа для обміну книгами для всіх хто любить книги">
-    <meta name="twitter:image" content="{% static "img/landing/header.jpg" %}">
+    <meta name="twitter:image" content="{{ request.scheme }}://{{ request.get_host }}{% static "img/landing/header.jpg" %}">
 
     <!-- Meta Tags Generated via http://heymeta.com -->
     <meta name="viewport" content="width=device-width" />
