Styles new colors

--- a/book/templates/book/list.html
+++ b/book/templates/book/list.html
@@ -43,7 +43,7 @@
                                 {{ field }}
                             </div>
                         {% endfor %}
-                        <input type="submit" name="">
+                        <input class="submit-btn" type="submit" name="">
                     </form>
                 </div>
                 <div class="col-md-10">
