--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -2,11 +2,13 @@
 
 // Gray and Brand Colors for use across theme
 
-@theme-primary:    	#fdcc52;
-@theme-secondary:  	#FF7043;
-@theme-tertiary:   	#dc2430;
-@theme-principal:  	#16a085;
-@theme-purple:		#7b4397;
+@theme-primary:    	#ff6464; // 255, 100, 100
+@theme-secondary:  	#ff8264; // 255, 130, 100
+@theme-tertiary:   	#70ffe2;
+@theme-principal:  	#e8e8e8;
+@theme-purple:		#70ffaa;
+@theme-gray:    #1e1d1d;
+@theme-yellow: #fdcc52;
 
 @theme-principal-text: #ecf0f1;
 
