--- a/common/templates/common/emails/base.html
+++ b/common/templates/common/emails/base.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
@@ -187,7 +188,7 @@
                 <tr>
                     <!-- Logo -->
                     <td style="padding: 20px 0; text-align: center">
-                        <img src="http://placehold.it/200x50" width="200" height="50" alt="alt_text" border="0" style="height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                        <img src="{{ BASE_URL }}{% static "img/landing/just-logo-small.png" %}" width="200" height="50" alt="alt_text" border="0" style="height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
                     </td>
                     <!-- Logo : END -->
                 </tr>
@@ -200,9 +201,6 @@
                 <!-- Hero Image, Flush : BEGIN -->
                 <tr>
                     {% block logo %}
-                        <td bgcolor="#ffffff">
-                            <img src="http://placehold.it/1200x600" width="600" height="" alt="alt_text" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;" class="g-img">
-                        </td>
                     {% endblock logo %}
                 </tr>
                 <!-- Hero Image, Flush : END -->
@@ -211,19 +209,6 @@
                     
                 {% endblock content %}
 
-                <!-- 1 Column Text : BEGIN -->
-                <tr>
-                    <td bgcolor="#ffffff">
-                        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
-                            <tr>
-                                <td style="padding: 40px; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
-                                    <p style="margin: 0;">Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent laoreet malesuada cursus. Maecenas scelerisque congue eros eu posuere. Praesent in felis ut velit pretium lobortis rhoncus ut&nbsp;erat.</p>
-                                </td>
-                            </tr>
-                        </table>
-                    </td>
-                </tr>
-                <!-- 1 Column Text : END -->
 
             </table>
             <!-- Email Body : END -->
@@ -232,11 +217,7 @@
             <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="max-width: 680px;">
                 <tr>
                     <td style="padding: 40px 10px;width: 100%;font-size: 12px; font-family: sans-serif; line-height:18px; text-align: center; color: #888888;" class="x-gmail-data-detectors">
-                        <webversion style="color:#cccccc; text-decoration:underline; font-weight: bold;">View as a Web Page</webversion>
-                        <br><br>
-                        Company Name<br>123 Fake Street, SpringField, OR, 97477 US<br>(123) 456-7890
-                        <br><br>
-                        <unsubscribe style="color:#888888; text-decoration:underline;">unsubscribe</unsubscribe>
+                        bookgo.me
                     </td>
                 </tr>
             </table>
@@ -249,6 +230,7 @@
             <![endif]-->
         </div>
 
+{% comment %}
         <!-- Full Bleed Background Section : BEGIN -->
         <table role="presentation" bgcolor="#709f2b" cellspacing="0" cellpadding="0" border="0" align="center" width="100%">
             <tr>
@@ -276,6 +258,7 @@
             </tr>
         </table>
         <!-- Full Bleed Background Section : END -->
+{% endcomment %}
 
     </center>
 </body>
