--- a/common/templates/common/emails/base.html
+++ b/common/templates/common/emails/base.html
@@ -188,7 +188,10 @@
                 <tr>
                     <!-- Logo -->
                     <td style="padding: 20px 0; text-align: center">
-                        <img src="{{ BASE_URL }}{% static "img/landing/just-logo-small.png" %}" width="200" height="50" alt="alt_text" border="0" style="height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                    {% comment %}
+                        {{ BASE_URL }}{% static "img/landing/just-logo-small.png" %}
+                    {% endcomment %}
+                        <img src="https://image.ibb.co/by8XUn/logo_small2.png" width="200" height="50" alt="alt_text" border="0" style="height: auto; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
                     </td>
                     <!-- Logo : END -->
                 </tr>
