--- a/common/templates/common/emails/bookgo-start.html
+++ b/common/templates/common/emails/bookgo-start.html
@@ -19,10 +19,10 @@
                         </p>
                         <br>
                         <p style="margin: 0;">
-                            Можливість зареєструватись є лише у тих, хто додав книгу до старту платформи. Тож, у вас є можливість запросити своїх 3 друзів долучитись до платформи використовуючи це посилання (просто скопіюйте і перешліть тим друзям)
+                            Можливість зареєструватись є лише у тих, хто додав книгу до старту платформи. Але ви можете запросити трьох друзів долучитись до платформи використовуючи це посилання (просто скопіюйте і перешліть)
                             <br>
                             <code>
-                                http://bookgo.me/users/invite/token/
+                                {{ BASE_URL }}{% url 'users:invite' user.get_or_create_invite %}
                             </code>
                             <br>
                         </p>
