--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block title %}{{ user.get_full_name }} - {% trans "Редагувати" %} - {{ block.super }}{% endblock title %}
+{% block title %}{% trans "Зареєструватись" %} - {{ block.super }}{% endblock title %}
 
 {% block content %}
     <section id="form-section" class="form-section bg-primary">
