--- a/templates/base.html
+++ b/templates/base.html
@@ -97,9 +97,8 @@
 
     <footer>
         <div class="container">
-            <p>2018 Bocrok</p>
+            <p>2018 Bookgo.me</p>
             <p>&copy; All Rights Reserved</p>
-            <p>Start Bootstrap Theme</p>
         </div>
     </footer>
 
