--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
                         </li>
                     {% else %}
                         <li>
-                            <a href="#" class="btn btn-outline" data-toggle="modal" data-target="#register-login">{% trans "Ввійти" %}</a>
+                            <a href="{% url 'users:login' %}" class="btn btn-outline">{% trans "Ввійти" %}</a>
                         </li>
                     {% endif %}
                 </ul>
