--- a/users/templates/users/includes/user_avatar_profile_thumbnail.html
+++ b/users/templates/users/includes/user_avatar_profile_thumbnail.html
@@ -1,5 +1,5 @@
 {% load thumbnail %}
 
 {% thumbnail image "250x250" crop="center" as im %}
-	<img src="{{ im.url }}">
+	<img src="{{ im.url }}" class="img-circle img-responsive">
 {% endthumbnail %}
