--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -11,18 +11,20 @@
             <div class="container">
                 <h1>{% trans "Реєстрація" %}</h1>
                 <div class="row">
-                    {% if form.errors %}
-                        <div class="alert alert-danger" role="alert">{% trans "Виправте помилки нижче" %}</div>
-                    {% endif %}
-                    {% if form.non_field_errors %}
-                        {% for err in form.non_field_errors %}
-                            <strong>{{ err }}</strong>
-                        {% endfor %}
-                    {% endif %}
-                    {{ form }}
-                </div>
-                <div class="text-center">
-                    <button type="submit" class="btn btn-filled-tertiary btn-xl">{% trans "Оновити" %}</button>
+                    <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3">
+                        {% if form.errors %}
+                            <div class="alert alert-danger" role="alert">{% trans "Виправте помилки нижче" %}</div>
+                        {% endif %}
+                        {% if form.non_field_errors %}
+                            {% for err in form.non_field_errors %}
+                                <strong>{{ err }}</strong>
+                            {% endfor %}
+                        {% endif %}
+                        {{ form }}
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-filled-tertiary btn-xl">{% trans "Зареєструватись" %}</button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="clearfix"></div>
