--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{% block title %}BoCRoK{% endblock title %}</title>
+    <title>{% block title %}bookgo.me{% endblock title %}</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static "lib/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
@@ -46,7 +46,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="/">BoCRoK</a>
+                <a class="navbar-brand page-scroll" href="/">bookgo.me</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
