--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -228,13 +228,13 @@
             <h2>Розкажи всім <i class="fa fa-share-alt"></i> про <br> таку чудову книгу!</h2>
             <ul class="list-inline list-social">
                 <li class="social-twitter">
-                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="https://twitter.com/intent/tweet?text={{ share_text }}&url={{ request.build_absolute_uri }}" target="_blank"><i class="fa fa-twitter"></i></a>
                 </li>
                 <li class="social-facebook">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/share.php?u={{ request.build_absolute_uri }}"  target="_blank"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li class="social-google-plus">
-                    <a href="#"><i class="fa fa-google-plus"></i></a>
+                    <a href="http://pinterest.com/pin/create/button/?url={{ request.build_absolute_uri }}&description={{ share_text }}&media=" target="_blank"><i class="fa fa-pinterest"></i></a>
                 </li>
             </ul>
         </div>
