Rename project: bocrok > bookgo

--- a/static/css/new-age.css
+++ b/static/css/new-age.css
@@ -1,5 +1,5 @@
 /*!
- * Start Bootstrap - BoCRoK v1.0.0 (http://bocrok.org.ua)
+ * Start Bootstrap - bookgo v1.0.0 (http://bookgo.org.ua)
  * Copyright 2013-2017 Dima Kovalchuk
  * Licensed under BSD (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
